# bxmlrs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  justfile  rustfmt.toml
.github/workflows/: rust.yml
bxmlrs/: Cargo.toml
bxmlrs-bin/: Cargo.toml
bxmlrs-bin/src/: main.rs
bxmlrs/src/: arsc_parser.rs  attributes.rs  lib.rs  nom_parser.rs  parser.rs  xml_parser.rs
data/xml/: AndroidManifest-com.simplemobiletools.gallery.pro.xml
notes/: text.md
