[package]
name = "bxmlrs"
version = "0.1.0"
edition = "2021"
description = "Android Binary XML parser"

[dependencies]
nom = { version = "7.1" }
thiserror = { version = "1" }
quick-xml = { version = "0.31" }
zip = { version = "0.6" }

[dev-dependencies]
anyhow = { version = "1" }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
